<resources>
    <string name="app_name" translatable="false">NextGIS Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New layer</string>
    <string name="action_add_local">Open local</string>
    <string name="general">General</string>
    <string name="general_summary">General settings</string>
    <string name="keep_screen_on">Keep map screen on</string>
    <string name="keep_screen_on_summary">Do not turn off screen</string>
    <string name="show_scale_ruler">Show scale ruler</string>
    <string name="show_ruler_measuring">Show measuring button</string>
    <string name="show_zoom_controls">Show zoom controls</string>
    <string name="show_zoom_controls_summary">Show zoom in/zoom out control on the map</string>
    <string name="show_compass">Show mini compass</string>
    <string name="map">Map</string>
    <string name="map_summary">Map settings</string>
    <string name="app_description">Mobile GIS application for spatial field data collection and sending it back to server. NextGIS Mobile also records tracks and sends position information to web server.</string>
    <string name="credits_intro">Credits</string>
    <string name="credits">Some icons used in the application are from <a href="http://icons8.com/android-icons">Icons8.com</a> licensed under a <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> and <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>
    <string name="copyright" translatable="false"><![CDATA[© <a href=\"https://nextgis.com\">NextGIS</a>, 2012–%s]]></string>
    <string name="contacts"><a href="https://nextgis.com/contact/">Contact us</a></string>
    <string name="action_about">About</string>
    <string name="add_current_place">Add current place</string>
    <string name="add_new_geometry">Add new geometry</string>
    <string name="add_geometry_by_walk">Add geometry by walking</string>
    <string name="warning_no_edit_layers">No editable layers</string>
    <string name="select_layer">Select layer to edit</string>
    <string name="menu_locate">Locate</string>
    <string name="select_file">Select file to create layer</string>
    <string name="warning_install_file_manager">Please install a File Manager</string>
    <string name="error_file_unsupported">File type is not supported</string>
    <string name="warning_not_implemented">Not implemented yet</string>
    <string name="pref_location_accuracy">Location accuracy</string>
    <string name="pref_location_accuracy_gps">GPS</string>
    <string name="pref_location_accuracy_cell">Other networks</string>
    <string name="location">Location</string>
    <string name="track_restore">Restore current track after reboot</string>
    <string name="tracks_reload">Restart current track to apply changes</string>
    <string name="pref_min_time">Minimum update time</string>
    <string name="pref_min_distance">Minimum update distance</string>
    <string name="meters">m</string>
    <string name="seconds">s</string>
    <string name="coordinates_format">Coordinates format</string>
    <string name="coordinates_fraction_digits">Decimal places</string>
    <string name="select_coordinates_format">Select coordinates format</string>
    <string name="coordinates_format_summary">Coordinate text format</string>
    <string name="map_bg">Map background</string>
    <string name="map_bg_light">Light</string>
    <string name="map_bg_neutral">Neutral</string>
    <string name="map_bg_dark">Dark</string>
    <string name="map_path">Map path</string>
    <string name="map_path_summary">The path to map data folder. Changing map folder may prevent data removal after application is uninstalled.</string>
    <string name="select_map_path">Select map folder path</string>
    <string name="moving">Moving…</string>
    <string name="warning_map_moving">Dangerous operation! Don\'t cancel it or kill the application during the data transfer to the new location! Your data may be broken or lost!</string>
    <string name="warning_folder_should_be_empty">The folder should be empty. Canceling operation.</string>
    <string name="frequentest">, as frequent as possible</string>
    <string name="compass_vibrate">Vibrate on bezel touch</string>
    <string name="compass_true_north">Show true north</string>
    <string name="compass_magnetic">Show magnetic</string>
    <string name="compass_keep_screen">Keep compass screen on</string>
    <string name="accurate_measures_count">Count of GPS measures</string>
    <string name="action_delete">Delete</string>
    <string name="action_attributes">Attributes</string>
    <string name="show_status_panel">Show status info panel</string>
    <string name="show_current_location">Show current location</string>
    <string name="edit_layer">Edit \'%s\' layer</string>
    <string name="features_count_attributes">%1$d of %2$d</string>
    <string name="coordinates">Coordinates</string>
    <string name="length">Length</string>
    <string name="center">Center</string>
    <string name="area">Area</string>
    <string name="perimeter">Perimeter</string>
    <string name="compass_title">Compass</string>
    <string name="refresh">Refresh</string>
    <string name="points_for_edit">Points (can be edited)</string>
    <string name="lines_for_edit">Lines (can be edited)</string>
    <string name="polygons_for_edit">Polygons (can be edited)</string>
    <string name="press_aback_again">Press back again to exit</string>
    <string name="interface_title">Interface</string>
    <string name="theme">Theme</string>
    <string name="reset_settings">Reset to defaults</string>
    <string name="reset_settings_title">Confirm?</string>
    <string name="reset_settings_message">All layers will be deleted! Only initial layers will be restored.</string>
    <string name="action_point_by_tap">Create new point</string>
    <string name="new_field">New field</string>
    <string name="empty_name">Name can not be empty</string>
    <string name="same_field_name">There is already a field with the same name</string>
    <string name="same_layer_name">There is already a layer with the same name</string>
    <string name="default_field_name">Description</string>
    <string name="pref_sync_notification">Show sync notification</string>
    <string name="alert_sync_turned_off">Syncing is turned off in your system settings and currently not possible. Turn back on?</string>
    <string name="alert_sync_title">Sync:</string>
    <string name="tap_to_measure">Tap on map to check points</string>
    <string name="permissions">Permissions</string>
    <string name="location_permissions">NextGIS Mobile requires location permission to show your location on the map.</string>
    <string name="account_permissions">NextGIS Mobile needs access to contacts to create and manage Web GIS Accounts further used for syncronization purposes.</string>
    <string name="memory_permissions">NextGIS Mobile uses media files access to create attachments (like photos) to map features.</string>
    <string name="push_permissions">NextGIS Mobile uses notifications to inform about data syncing data activities.</string>
    <string name="action_support">Support</string>
    <string name="app_support">Please send us questions, bug-reports and new features suggestions. Commercial support is available.</string>
    <string name="email">Email</string>
    <string name="support">Support:</string>
    <string name="email_src">support@nextgis.com</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_src">\@nextgis_talks</string>
    <string name="telegram_prompt">nextgis_talks</string>
    <string name="github">Github</string>
    <string name="github_src">http://github.com/nextgis/android_gisapp/issues</string>
    <string name="web">Website</string>
    <string name="web_src">https://nextgis.com/nextgis-mobile</string>
    <string name="manual">Documentation</string>
    <string name="manual_url">https://docs.nextgis.com/docs_ngmobile/source/</string>
    <string name="not_installed">Application not installed</string>
    <string name="action_help">Help</string>
    <string name="location_distance_to">Distance to (m)</string>
    <string name="pref_ga">Collect statistics</string>
    <string name="pref_ga_sum">Send anonymous Google Analytics data to improve app quality and stability</string>
    <string name="update_new">Version %1$s found. Would you like to update?</string>
    <string name="update_title">Update?</string>
    <string name="update_check">Check updates</string>
    <string name="update_no">No updates found</string>
    <string name="intro1">Welcome to NextGIS Mobile!\n\nThis app can:\n* Create and navigate multi-layered maps\n* Add and create geodata\n* Help in field data collection\n* Write tracks\nand much more!</string>
    <string name="intro2">Sign in to get the most out of this app, synchronize your data and get regular updates (support plan is needed). You can sign in later in Settings.</string>
    <string name="support_available">Supported version available</string>
    <string name="more">More</string>
    <string name="pricing">http://nextgis.com/pricing-base/</string>
    <string name="intro1_1">Create multi-layered maps</string>
    <string name="intro1_2">Add and create geodata</string>
    <string name="intro1_3">Collect field data</string>
    <string name="intro1_4">Record tracks</string>
    <string name="intro2_1">New functionality, unavailable in trial version</string>
    <string name="intro2_2">Regular updates</string>
    <string name="intro2_3">Quick bug-fixing</string>
    <string name="intro2_4">Direct support</string>
    <string name="intro_more">Get more:</string>
    <string name="intro_free">Your app version is free</string>
    <string name="intro_get_pro">Get NextGIS Mobile Pro</string>
    <string name="track_uid">Your UID</string>
    <string name="track_send">Send location to server</string>
    <string name="preferred_units">Measurement system</string>
    <string name="show_zoom_level">Show zoom level</string>
    <string name="restore_layers">Restore broken layers</string>
    <string name="select_layer_to_restore">Select layer to restore</string>
    <string name="other">Other</string>
    <string name="extended_logs">Extended logs</string>
    <string name="share_log">Share log</string>
    <string name="choose_object">Choose object:</string>
    <string name="push_perm_title">Notifications</string>
    <string name="push_perm_text">Notifications are disabled by the system, to enable them go to settings, find the application and enable notifications</string>
    <string name="push_perm_why_text">To receive notifications you need to give permissions</string>
    <string name="copied">Text copied to clipboard</string>
</resources>