<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="location_source_str"
        android:title="@string/pref_location_accuracy"
        android:entryValues="@array/location_accuracy_val"
        android:defaultValue="3"
        />

    <EditTextPreference
        android:key="location_min_time"
        android:title="@string/pref_min_time"
        android:defaultValue="10"
        android:inputType="number"
        android:numeric="integer"
        />

    <EditTextPreference
        android:key="location_min_distance"
        android:title="@string/pref_min_distance"
        android:defaultValue="2"
        android:inputType="number|numberDecimal"
        android:numeric="decimal"
        />

    <!--TODO:
    1) add accuracy,
    2) CE,
    3) time period and
    4) minimal distance to pick location -->
</PreferenceScreen>