<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  NextGIS Mobile
  ~ Purpose:  Mobile GIS for Android.
  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="tracks_location_source_str"
        android:title="@string/pref_location_accuracy"
        android:entryValues="@array/location_accuracy_val"
        android:defaultValue="1"
        />

    <ListPreference
        android:key="tracks_min_time"
        android:title="@string/pref_min_time"
        android:defaultValue="0"
        android:entries="@array/tracker_min_time_between_updates"
        android:entryValues="@array/tracker_min_time_between_updates_val"
        />

    <ListPreference
        android:key="tracks_min_distance"
        android:title="@string/pref_min_distance"
        android:defaultValue="1"
        android:entries="@array/tracker_min_dist_update"
        android:entryValues="@array/tracker_min_dist_update_val"
        />

    <!-- TODO: add
    1) time period and -done
    2) minimal distance to pick location -done
    3) account (or accounts?) to send current location
    4) tracks group rules - daily, weekly, monthly etc.
    -->

</PreferenceScreen>